exempt /ws from commands

--- a/plugin_configs/nocheatplus.conf
+++ b/plugin_configs/nocheatplus.conf
@@ -47,7 +47,7 @@ protection:
         commands: []
   commands:
     consoleonly:
-      active: false
+      active: true
       message: '&cI''m sorry, but this command can''t be executed in chat. Use the console instead!'
       commands:
       - op
@@ -138,7 +138,8 @@ checks:
       actions: log:color:0:1:if cancel
     commands:
       active: true
-      exclusions: []
+      exclusions:
+      - ws
       handleaschat:
       - me
       level: 10
